add content-grid block

--- a/src/templates/blog_item.jade
+++ b/src/templates/blog_item.jade
@@ -49,6 +49,45 @@ block content
                     .text-center
                         img(src='http://placehold.it/530x410')
                     p С 13 по 16 апреля сайт ни разу не занимал одинаковую позицию. 15 апреля в топ вошли сайты #[a(href='#') zarplatawmz.ru] и dolinacoda.ru. Первый 16 апреля из топа исчез, а второй там удержался. 16 апреля «Яндекс» показывал в выдаче по выбранному запросу блок с видео.
+                    .b-content-grid
+                        .b-content-grid__item
+                            .b-content-grid__image
+                                img.img-responsive(src='http://placehold.it/200x200', alt='')
+                            h4.b-content-grid__title Lorem ipsum dolor sit amet
+                            .b-content-grid__text
+                                p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed libero turpis, sodales at diam sit amet, ullamcorper viverra quam. Nam placerat, augue a blandit ultrices
+                        .b-content-grid__item
+                            .b-content-grid__image
+                                img.img-responsive(src='http://placehold.it/200x200', alt='')
+                            h4.b-content-grid__title Lorem ipsum dolor sit amet
+                            .b-content-grid__text
+                                p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed libero turpis, sodales at diam sit amet, ullamcorper viverra quam. Nam placerat, augue a blandit ultrices, felis sem viverra dui, fringilla blandit erat diam ut nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi sed ipsum nec dui tincidunt fermentum ac sed risus.
+                        .b-content-grid__item
+                            .b-content-grid__image
+                                img.img-responsive(src='http://placehold.it/200x200', alt='')
+                            h4.b-content-grid__title Lorem ipsum dolor sit amet
+                            .b-content-grid__text
+                                p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed libero turpis, sodales at diam sit amet, ullamcorper viverra quam. Nam placerat, augue a blandit ultrices
+                        .b-content-grid__item
+                            .b-content-grid__image
+                                img.img-responsive(src='http://placehold.it/200x200', alt='')
+                            h4.b-content-grid__title Lorem ipsum dolor sit amet
+                            .b-content-grid__text
+                                p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed libero turpis, sodales at diam sit amet, ullamcorper viverra quam. Nam placerat, augue a blandit ultrices
+                        .b-content-grid__item
+                            .b-content-grid__image
+                                img.img-responsive(src='http://placehold.it/200x200', alt='')
+                            h4.b-content-grid__title Lorem ipsum dolor sit amet
+                            .b-content-grid__text
+                                p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed libero turpis, sodales at diam sit amet, ullamcorper viverra quam. Nam placerat, augue a blandit ultrices, felis sem viverra dui, fringilla blandit erat diam ut nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi sed ipsum nec dui tincidunt fermentum ac sed risus.
+                        .b-content-grid__item
+                            .b-content-grid__image
+                                img.img-responsive(src='http://placehold.it/200x200', alt='')
+                            h4.b-content-grid__title Lorem ipsum dolor sit amet
+                            .b-content-grid__text
+                                p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed libero turpis, sodales at diam sit amet, ullamcorper viverra quam. Nam placerat, augue a blandit ultrices
+
+
                     .b-gallery
                         a.b-gallery__item(href='http://farm6.staticflickr.com/5444/17679973232_568353a624_b.jpg', rel='gallery_1', title=''): img.b-gallery__image(src='http://farm6.staticflickr.com/5444/17679973232_568353a624_m.jpg', alt='')
                         a.b-gallery__item(href='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_b.jpg', rel='gallery_1', title='Codirosso spazzacamino (Massimo Greco _Foligno)'): img.b-gallery__image(src='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_m.jpg', alt='')
