add iframe-scroll some fixes

--- a/src/templates/includes/head.jade
+++ b/src/templates/includes/head.jade
@@ -15,6 +15,7 @@ head
         link(rel='stylesheet', href='assets/vendor/fancybox/source/jquery.fancybox.css?v=2.1.5', media='screen')
         //link(rel='stylesheet', href='assets/vendor/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=2.1.5', media='screen')
         link(rel='stylesheet', href='assets/vendor/odometer/themes/odometer-theme-minimal.css')
+        link(rel='stylesheet', href='assets/vendor/jquery.scrollbar/jquery.scrollbar.css')
         link(rel='stylesheet', href='assets/css/common.min.css')
 
     block scripts
@@ -26,6 +27,7 @@ head
         script(src='assets/vendor/fancybox/source/jquery.fancybox.pack.js?v=2.1.5')
         script(src='assets/vendor/fancybox/source/helpers/jquery.fancybox-media.js')
         //script(src='assets/vendor/fancybox/source/helpers/jquery.fancybox-thumbs.js')
+        script(src='assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js')
         //script(src='assets/vendor/odometer/odometer.min.js')
         script(src='assets/js/emerge.js')
         script(src='assets/js/script.js')
