--- a/src/templates/portfolio_item.jade
+++ b/src/templates/portfolio_item.jade
@@ -22,10 +22,14 @@ block content
                         .tab-content
                             #banner_language_ru_size_240_400.tab-pane.active(role="tabpanel")
                                 .b-portfolio-item__view
-                                    img.b-portfolio-item__image.img-responsive(src='http://placehold.it/970x90', alt='')
+                                    .b-portfolio-item__scroll.scrollbar-light
+                                        img.b-portfolio-item__image(src='http://placehold.it/770x90', alt='')
                             #banner_language_ru_size_100_100.tab-pane(role="tabpanel")
                                 .b-portfolio-item__view
-                                    img.b-portfolio-item__image.img-responsive(src='http://placehold.it/100x100', alt='')
+                                    .b-portfolio-item__scroll.scrollbar-light
+                                        .b-iframe-scroll(style="width:728px;height:90px;")
+                                            <iframe src="http://home.nanoteam.net/tolkunov/public/uploads/portfolio/cd7511c14132cc75594276b90af20f7c/728x90-adxxx-adalt-traffic.html" width="728" height="90" frameborder="0" scrolling="no"></iframe>
+                                            .b-iframe-scroll__fix
                             #banner_language_ru_size_200_300.tab-pane(role="tabpanel")
                                 .b-portfolio-item__view
                                     img.b-portfolio-item__image.img-responsive(src='http://placehold.it/1200x300', alt='')
