add tabs to client page add back button to client page add full width to clients page change google plus to twitter in share button

--- a/src/blocks/b-clients/b-clients.less
+++ b/src/blocks/b-clients/b-clients.less
@@ -16,6 +16,7 @@
 
 	display: flex;
 	flex-flow: row wrap;
+	justify-content: center;
 }
 
 .b-clients__item {
@@ -36,7 +37,7 @@
 	}
 
 	@media (min-width: @screen-xl-min) {
-		flex-basis: ~"calc(100% / 4 - 40px)";
+		flex-basis: 200px;
 	}
 
 	padding: 20px 0 16px;
