--- a/src/templates/blog_item.jade
+++ b/src/templates/blog_item.jade
@@ -42,7 +42,7 @@ block content
                         .b-blog-item__share
                             script(src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js")
                             script(src="//yastatic.net/share2/share.js")
-                            .ya-share2(data-services="vkontakte,facebook,gplus")
+                            .ya-share2(data-services="vkontakte,facebook,twitter")
                 .b-blog-item__text.b-text
                     p Выберите подходящие настройки показов на тематических площадках. Укажите долю бюджета кампании, которую вы готовы тратить на переходы с сайтов-партнеров «Яндекса». Учитывайте особенности вашего бизнеса и тематику объявлений. Например, для продавцов пиццы с доставкой предпочтительнее привлекать транзакционный трафик со страницы выдачи. А продавцам сложных и дорогих продуктов лучше сделать акцент на трафике с тематических сайтов, на которых аудитория ищет информацию в ходе потребительского путешествия.
 
