--- a/src/templates/clients.jade
+++ b/src/templates/clients.jade
@@ -6,7 +6,7 @@ block content
             h1.b-page__title Клиенты
 
         .b-clients
-            .container
+            .container-fluid
                 .b-clients__list
                     - for (var i=0; i<3;++i)
                         a.b-clients__item(href='client.html')
