--- a/src/templates/portfolio_item.jade
+++ b/src/templates/portfolio_item.jade
@@ -64,7 +64,7 @@ block content
                         .b-portfolio-item__share
                             script(src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js")
                             script(src="//yastatic.net/share2/share.js")
-                            .ya-share2(data-services="vkontakte,facebook,gplus")
+                            .ya-share2(data-services="vkontakte,facebook,twitter")
                 .b-portfolio-item__text.b-text
                     p Интерактивный флеш-баннер 240x400 для компании WikiPlanet, которая занимается организацией туров по всей России. Кстати, актуально при нынешнем курсе доллара.
                     p Особенности:
