--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -30,6 +30,10 @@
 .b-portfolio-item__image {
 	margin-left: auto;
 	margin-right: auto;
+
+	@media (min-width: @grid-float-breakpoint) {
+		.img-responsive();
+	}
 }
 
 .b-portfolio-item__lead {
