--- a/src/blocks/b-iframe-scroll/b-iframe-scroll.less
+++ b/src/blocks/b-iframe-scroll/b-iframe-scroll.less
@@ -13,4 +13,8 @@
 	width: 100%;
 	height: 100%;
 	background: rgba(255, 255, 255, 0);
+
+	@media (min-width: @grid-float-breakpoint) {
+		display: none;
+	}
 }
